@@ -8,13 +8,17 @@ import com.agilebank.model.transaction.Transaction;
 import com.agilebank.model.transaction.TransactionDto;
 import com.agilebank.persistence.AccountRepository;
 import com.agilebank.persistence.TransactionRepository;
+import com.agilebank.util.SortOrder;
 import com.agilebank.util.exceptions.*;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -56,21 +60,14 @@ public class TransactionService {
         currencyExchangeRates.get(
             new CurrencyPair(sourceAccount.get().getCurrency(), transactionDto.getCurrency()));
     // Debit the source account in its own currency.
-    sourceAccount
-        .get()
-        .setBalance(
-            sourceAccount
-                .get()
-                .getBalance()
-                .subtract(
+    accountRepository.updateBalance(sourceAccount.get().getId(), sourceAccount
+            .get()
+            .getBalance()
+            .subtract(
                     transactionDto.getAmount().multiply(sourceToTransactionCurrencyExchangeRate)));
     // Credit the target account in its own currency.
-    targetAccount
-        .get()
-        .setBalance(targetAccount.get().getBalance().add(transactionDto.getAmount()));
-    // Save the updated accounts. 
-    accountRepository.updateBalance(sourceAccount.get().getId(), sourceAccount.get().getBalance());
-    accountRepository.updateBalance(targetAccount.get().getId(), targetAccount.get().getBalance());
+    accountRepository.updateBalance(targetAccount.get().getId(),targetAccount.get().getBalance()
+            .add(transactionDto.getAmount()));
     // Finally, save and return the transaction.
     Transaction storedTransaction =
         transactionRepository.save(
@@ -116,8 +113,10 @@ public class TransactionService {
    * @return A {@link List} with all the transactions that are stored in the database.
    */
   @Transactional(readOnly = true)
-  public List<TransactionDto> getAllTransactions() {
-    return transactionRepository.findAll().stream()
+  public Page<TransactionDto> getAllTransactions(Integer page, Integer pageSize,
+                                                 String sortByField, SortOrder sortOrder) {
+    Sort sorter = (sortOrder == SortOrder.ASC) ? Sort.by(sortByField).ascending() : Sort.by(sortByField).descending();
+    List<TransactionDto> transactions = transactionRepository.findAll(PageRequest.of(page, pageSize, sorter)).stream()
         .map(
             transaction ->
                 TransactionDto.builder()
@@ -127,7 +126,8 @@ public class TransactionService {
                     .currency(transaction.getCurrency())
                     .amount(transaction.getAmount())
                     .build())
-        .collect(Collectors.toList());
+        .toList();
+    return new PageImpl<>(transactions);
   }
 
   /**
@@ -136,8 +136,11 @@ public class TransactionService {
    * @return A List of all transactions with the source account corresponding to {@literal sourceAccountId}.
    */
   @Transactional(readOnly = true)
-  public List<TransactionDto> getAllTransactionsFrom(Long sourceAccountId) {
-    return transactionRepository.findBySourceAccountId(sourceAccountId).stream()
+  public Page<TransactionDto> getAllTransactionsFrom(Long sourceAccountId, Integer page, Integer pageSize,
+                                                     String sortByField, SortOrder sortOrder) {
+    Sort sorter = (sortOrder == SortOrder.ASC) ? Sort.by(sortByField).ascending() : Sort.by(sortByField).descending();
+    List<TransactionDto> transactions = transactionRepository.findBySourceAccountId(sourceAccountId, 
+                    PageRequest.of(page, pageSize, sorter)).stream()
         .map(
             transaction ->
                 TransactionDto.builder()
@@ -147,7 +150,8 @@ public class TransactionService {
                     .currency(transaction.getCurrency())
                     .amount(transaction.getAmount())
                     .build())
-        .collect(Collectors.toList());
+        .toList();
+    return new PageImpl<>(transactions);
   }
 
   /**
@@ -156,8 +160,10 @@ public class TransactionService {
    * @return A List of all transactions with the target account corresponding to {@literal targetAccountId}.
    */
   @Transactional(readOnly = true)
-  public List<TransactionDto> getAllTransactionsTo(Long targetAccountId) {
-    return transactionRepository.findByTargetAccountId(targetAccountId).stream()
+  public Page<TransactionDto> getAllTransactionsTo(Long targetAccountId, Integer page, Integer pageSize,
+                                                   String sortByField, SortOrder sortOrder) {
+    Sort sorter = (sortOrder == SortOrder.ASC) ? Sort.by(sortByField).ascending() : Sort.by(sortByField).descending();
+    List<TransactionDto> transactions = transactionRepository.findByTargetAccountId(targetAccountId, PageRequest.of(page, pageSize, sorter)).stream()
         .map(
             transaction ->
                 TransactionDto.builder()
@@ -167,7 +173,8 @@ public class TransactionService {
                     .currency(transaction.getCurrency())
                     .amount(transaction.getAmount())
                     .build())
-        .collect(Collectors.toList());
+        .toList();
+    return new PageImpl<>(transactions);
   }
 
   /**
@@ -177,10 +184,12 @@ public class TransactionService {
    * @return A List of all transactions with the source and target accounts correponding to the IDs provided.
    */
   @Transactional(readOnly = true)
-  public List<TransactionDto> getAllTransactionsBetween(
-      Long sourceAccountId, Long targetAccountId) {
-    return transactionRepository
-        .findBySourceAccountIdAndTargetAccountId(sourceAccountId, targetAccountId)
+  public Page<TransactionDto> getAllTransactionsBetween(
+      Long sourceAccountId, Long targetAccountId, Integer page, Integer pageSize,
+      String sortByField, SortOrder sortOrder) {
+    Sort sorter = (sortOrder == SortOrder.ASC) ? Sort.by(sortByField).ascending() : Sort.by(sortByField).descending();
+    List<TransactionDto> transactions = transactionRepository
+        .findBySourceAccountIdAndTargetAccountId(sourceAccountId, targetAccountId, PageRequest.of(page, pageSize, sorter))
         .stream()
         .map(
             transaction ->
@@ -191,7 +200,8 @@ public class TransactionService {
                     .currency(transaction.getCurrency())
                     .amount(transaction.getAmount())
                     .build())
-        .collect(Collectors.toList());
+        .toList();
+    return new PageImpl<>(transactions);
   }
 
   /**
